# hermes-pet

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
docs/: PRD.md  lessons.md  progress.md  tech.md
docs/features/: dialog-bubble.md  work-mode.md
src/: App.css  App.tsx  hitRegions.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  runner.rs
src/components/: BubbleStack.css  BubbleStack.tsx  ChatPanel.css  ChatPanel.tsx  PetCircle.css  PetCircle.tsx
src/hooks/: useHermesTask.ts
src/lib/: prompts.ts
