[package]
name = "hermes-pet"
version = "0.1.0"
description = "Hermes 桌宠 - 戴翅膀头盔的小机器人，本地 Hermes Agent 的桌面伙计"
authors = ["Wayne <Trip1ewhy@github>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hermes_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# 直通 AppKit：
# - tame 窗口（floating + all-spaces + never-hide）
# - 后台线程轮询 NSEvent.mouseLocation 拿全局鼠标坐标（穿透状态下事件回调收不到）
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder", "NSPanel"] }
objc2-foundation = "0.3"

